<?xml version="1.0"?>
<package>
  <name>eigen</name>
  <version>0.0.0</version>
  <description>A fixed version of Eigen with catkin capabilities</description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>
  <author email="missing@missing.com">TODO</author>

  <license>MPL2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
