<?xml version="1.0"?>
<package>
  <name>eigen</name>
  <version>0.0.0</version>
  <description>A simple catkin package used to provide catkin interface to the eigen system library. Is simply there to maintain compatibility with Rhoban architecture.</description>

  <maintainer email="lhofer@labri.fr">Ludovic Hofer</maintainer>

  <license>MPL2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
